--- a/projects/crud/src/lib/components/file-upload/file-upload.component.html
+++ b/projects/crud/src/lib/components/file-upload/file-upload.component.html
@@ -1,4 +1,4 @@
 <label class="fileContainer">
-    Add Files
-        <input type="file" id="file"/>
-    </label>
+    Add Attachment
+    <input type="file" id="file" />
+</label>
