--- a/projects/crud/src/lib/components/model-form/model-form.component.html
+++ b/projects/crud/src/lib/components/model-form/model-form.component.html
@@ -63,7 +63,7 @@
                                 <ng-container *ngIf="config?.control?.collapsibleFields">
                                         <mat-accordion style="width: 100%;">
                                             <mat-expansion-panel id="collapsible_control" [expanded]="false">
-                                                <mat-expansion-panel-header class="specific-class" id="collapsed-fields">
+                                                <mat-expansion-panel-header id="collapsed-fields" class="collapsible-accordion">
                                                     <mat-divider class="divider"></mat-divider>
                                                 </mat-expansion-panel-header>
                                                 <ng-container
