--- a/projects/crud/src/lib/components/attachments/attachments.component.css
+++ b/projects/crud/src/lib/components/attachments/attachments.component.css
@@ -1,77 +1,81 @@
 .upload_container {
-    display        : flex;
-    justify-content: flex-start;
-    width          : 100%;
+  text-align: center;
 }
-
+.form-container{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 26px;
+}
 .delete_icon {
-    color  : #EF4430;
-    cursor : pointer;
-    padding: 0;
+  color: #ef4430;
+  cursor: pointer;
+  padding: 0;
 }
-.icon_btn{
-    width: unset;
+.icon_btn {
+  width: unset;
 }
 
 .download_icon {
-    padding: 0;
-    cursor : pointer;
-    color  : #82C572;
+  padding: 0;
+  cursor: pointer;
+  color: #82c572;
 }
 
 .table_row {
-    text-align: left;
-    height    : 50px
+  text-align: left;
+  height: 50px;
 }
 
 tr.table_row th {
-    font-size   : 14px;
-    padding-left: 10px
+  font-size: 14px;
+  padding-left: 10px;
 }
 
 tr.border_bottom td {
-    border-top: 1pt solid #c5bebe;
+  border-top: 1pt solid #c5bebe;
 }
 
 tr td {
-    padding-left: 3px;
+  padding-left: 3px;
 }
 
 table.attachment-table {
-    width          : 95%;
-    margin-left    : 13px;
-    border-collapse: collapse;
+  width: 100%;
+  border-collapse: collapse;
+  color: rgba(0,0,0,.6);
+  font-weight: 400;
 }
 
 table.attachment-table tr {
-    font-size: 13px;
+  font-size: 13px;
 }
 
 li {
-    display        : flex;
-    align-items    : center;
-    justify-content: flex-start;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
 
-pre {
-    font         : 200 10px/20px Roboto, "Helvetica Neue", sans-serif;
-    margin-bottom: -15px
+.pre {
+  font: 200 10px/20px Roboto, "Helvetica Neue", sans-serif;
+  margin-bottom: -15px;
+  display: inline;
 }
 
 .thead {
-    display: block;
-    width  : 100%;
-    height : 45px;
+  display: block;
+  width: 100%;
+  height: 45px;
 }
 
 .tableBody {
-    display   : block;
-    width     : 100%;
-    height    : 80px;
-    overflow-y: auto;
-    overflow-x: auto;
+  display: block;
+  width: 100%;
+  height: 80px;
+  overflow-y: auto;
+  overflow-x: auto;
 }
 
 .file-name {
-    width: 100%;
+  width: 100%;
 }
