--- a/projects/crud/src/lib/components/file-upload/file-upload.component.css
+++ b/projects/crud/src/lib/components/file-upload/file-upload.component.css
@@ -25,8 +25,16 @@
     border-radius: 0;
     float: left;
     padding: 10px;
+    width: 146px;
 }
 
 .fileContainer [type=file] {
     cursor: pointer;
+}
+
+
+@media only screen and (max-width: 599px) {
+    .fileContainer {
+        width: 70px;
+    }
 }
