CE-18990: resolved the remaining defects

--- a/projects/crud/src/lib/components/formset/formset.component.html
+++ b/projects/crud/src/lib/components/formset/formset.component.html
@@ -17,7 +17,7 @@
                                 </ng-crud-form-field>
                             </div>
                         </ng-container>
-                        <div *ngIf="i>=1" class="delete_btn bottom">
+                        <div class="delete_btn bottom">
                             <button mat-icon-button style="color:red;" (click)="delete(i)">
                                 <mat-icon>delete_outline</mat-icon>
                             </button>
@@ -39,7 +39,7 @@
                                 </ng-crud-form-field>
                             </div>
                         </ng-container>
-                        <div *ngIf="i>=1" class="delete_btn top">
+                        <div class="delete_btn top">
                             <button mat-icon-button style="color:red;" (click)="delete(i)">
                                 <mat-icon>delete_outline</mat-icon>
                             </button>
