--- a/projects/crud/src/lib/components/model-form/model-form.component.scss
+++ b/projects/crud/src/lib/components/model-form/model-form.component.scss
@@ -224,14 +224,12 @@ mat-panel-title {
     margin: 10px;
 }
 .crud-form-field-container {
-    width:calc(25% - 18px);
+    width: 25%;
+    padding: 0 9px;
     display:inline-block;
     box-sizing: border-box;
 }
 
-.crud-form-field-container:not(:nth-child(4)){
-    margin-right: 18px;
-}
 @media only screen and (max-width: 599px) {
     ::ng-deep .crud-accordion {
         margin: 10px 0 ;
@@ -263,12 +261,28 @@ mat-panel-title {
     }
     .save, .saveAndAdd, .saveAndEdit {
         margin-right: 5px;
-        width: 100px;
-        font-size: smaller;
+        width: 120px;
+        font-size: small;
         text-align: center;    }
 }
 //attachments
 .mat-accordion:nth-last-child(1) .crud-form-field-container.outer-fields {
     display: flex ;
     width: 100%;
+}
+#actions-btn {
+    min-width: 47px;
+    padding: 2px 0px;
+}
+.capture_ID {
+    padding: 2px 16px;
+}
+mat-expansion-panel-header.mat-expansion-panel-header{
+    background-color: unset !important
+}
+.collapsible-accordion {
+    padding: 0 9px;
+}
+.action_btn_divider {
+    margin: 0px 8px;
 }
