--- a/projects/crud/src/lib/components/file-upload/file-upload.component.css
+++ b/projects/crud/src/lib/components/file-upload/file-upload.component.css
@@ -22,7 +22,7 @@
 .fileContainer {
     background: #59BB61;
     color: #fff;
-    border-radius: 0;
+    border-radius: 4px;
     float: left;
     padding: 10px;
     width: 146px;
