--- a/projects/crud/src/lib/components/model-form/model-form.component.scss
+++ b/projects/crud/src/lib/components/model-form/model-form.component.scss
@@ -241,6 +241,7 @@ mat-panel-title {
         width: calc(50% - 17px);
         flex-grow: 1;
         margin-right: 0 !important;
+        padding: 0;
     }
     ::ng-deep .crud_expansion_panel .mat-expansion-panel-body {
         padding: 15px 8px 8px 8px;
@@ -261,9 +262,15 @@ mat-panel-title {
     }
     .save, .saveAndAdd, .saveAndEdit {
         margin-right: 5px;
-        width: 120px;
+        width: 30%;
         font-size: small;
-        text-align: center;    }
+        text-align: center;
+        padding: 0px;    
+    }
+    .crud_expansion_panel .mat-form-field {
+            border-right: 0;
+            padding: 0;
+        }
 }
 //attachments
 .mat-accordion:nth-last-child(1) .crud-form-field-container.outer-fields {
