--- a/projects/crud/src/lib/components/listing/listing.component.html
+++ b/projects/crud/src/lib/components/listing/listing.component.html
@@ -21,7 +21,7 @@
         </ng-container>
     </div>
     <h2 mat-dialog-title style="padding:10px;" class="separated" *ngIf="viewConfig.dialog_mode">
-        <span> {{viewConfig.title}}</span>
+        <span> {{viewConfig.title + " Search"}}</span>
         <mat-icon class="cancel_icon" (click)="cancel()" id="close-dialog-icon">cancel</mat-icon>
     </h2>
     <ng-container *ngIf="viewConfig?.dialog_settings?.add_new_btn">
