--- a/projects/crud/src/lib/components/model-form/model-form.component.html
+++ b/projects/crud/src/lib/components/model-form/model-form.component.html
@@ -3,6 +3,10 @@
 </div>
 
 <ng-template #page>
+    <h2 mat-dialog-title style="padding:10px;" class="separated" *ngIf="openedInaialog">
+        <span> {{id? "Edit " + viewConfig.title : "Add New " + viewConfig.title}}</span>
+        <mat-icon class="cancel_icon" (click)="cancel($event)" id="close-dialog-icon">cancel</mat-icon>
+    </h2>
     <div class="crud-form-body" [ngStyle]="{'display': (initialLoading && mode==='edit')?'none':''}">
         <ng-template [ngIf]="is_ready">
             <ng-error-handling></ng-error-handling>
