add Attachments JPG validation and close mat dialog on capture id button

--- a/projects/crud/src/lib/components/attachments/attachments.component.html
+++ b/projects/crud/src/lib/components/attachments/attachments.component.html
@@ -2,7 +2,7 @@
     <div [formGroup]="formGroup" class="form-container">
         <mat-hint class="hint" >
             <p class="pre">
-  Allowed file extensions: PDF, Doc, Docx, Xls, Xlsx, JPEG, GIF, PNG, BMP. <br>
+  Allowed file extensions: PDF, Doc, Docx, Xls, Xlsx, JPEG, GIF, PNG, BMP, JPG. <br>
   Maximum file size: 1 MB.
             </p>
         </mat-hint>
