--- a/projects/crud/src/lib/components/foreign-key-filed-multiple/foreign-key-filed-multiple.component.html
+++ b/projects/crud/src/lib/components/foreign-key-filed-multiple/foreign-key-filed-multiple.component.html
@@ -1,29 +1,15 @@
-<mat-form-field class="example-chip-list" >
-  <mat-chip-list #chipList aria-label="Fruit selection">
-    <mat-chip
-      *ngFor="let result of selected_results"
-      [selectable]="selectable"
-      [removable]="removable"
-      (removed)="remove(result)">
-      {{result[config.listFrom]}}
-      <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-    </mat-chip>
-    <input
-    id="{{config?.name}}-field"
-    [placeholder]="config.label"
-      #fruitInput
-      [formControl]="_underlyingCtrl"
-      [matAutocomplete]="auto"
-      [matChipInputFor]="chipList"
-      [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-      (matChipInputTokenEnd)="add($event)">
-  </mat-chip-list>
-  <mat-autocomplete [displayWith]="displayFn" #auto="matAutocomplete" (optionSelected)="selected($event)">
-    <mat-option *ngFor="let option of filtered | async" [value]="option">
-      {{option[controlConfig.metadata.optionName]}}
-    </mat-option>
-  </mat-autocomplete>
-</mat-form-field>
+<mat-icon class="input_icon" style="color: #1490C0;
+        cursor: pointer;
+        position: absolute;
+        bottom: 10px;
+        right: 0px;" *ngIf="config?.isSearchable" (click)="openListingDialog($event)">search</mat-icon>
+
+
+<mat-select-autocomplete placeholder="{{config.label}}" [fieldFormControl]="_underlyingCtrl"
+  [options$]="options$.asObservable()" [display]="config.listFrom" [value]="config.resolveValueFrom" [multiple]='true'
+  [labelCount]="10" [selectedOptions]="selectedOptions" (selectionChange)="selected($event)" (onSearch)="fetch($event)">
+</mat-select-autocomplete>
+
 
 
 <!-- Copyright 2019 Google LLC. All Rights Reserved.
