1. handle foriegn key multiple field having default value 2. handle multiple filters using regex 3. add option to have lookup icon , fix field's width in case of lookup 4. update multiselect package version

--- a/projects/crud/src/lib/components/foreign-key-filed-multiple/foreign-key-filed-multiple.component.html
+++ b/projects/crud/src/lib/components/foreign-key-filed-multiple/foreign-key-filed-multiple.component.html
@@ -1,15 +1,13 @@
-<mat-icon class="input_icon" style="color: #1490C0;
-        cursor: pointer;
-        position: absolute;
-        bottom: 10px;
-        right: 0px;" *ngIf="config?.isSearchable" (click)="openListingDialog($event)">search</mat-icon>
-
-
 <mat-select-autocomplete placeholder="{{config.label}}" [fieldFormControl]="_underlyingCtrl"
-  [options$]="options$.asObservable()" [display]="config.listFrom" [value]="config.resolveValueFrom" [multiple]='true'
-  [labelCount]="10" [selectedOptions]="selectedOptions" (selectionChange)="selected($event)" (onSearch)="fetch($event)">
+  [ElementWidth]="config?.isSearchable ? '85%' : '100%'" [options$]="options$.asObservable()"
+  [display]="config.listFrom" [value]="config.resolveValueFrom" [multiple]='true' [labelCount]="10"
+  [selectedOptions]="selectedOptions" (selectionChange)="selected($event)" (onSearch)="fetch($event)"
+  [fieldsSelectors]="{searchField: '{{config.name}}-search-field', selectField: 'select-{{config.name}}', clearFieldIcon: 'icon-clear-{{config.name}}-field', clearSelection: '{{config.name}}-clear-selection'}">
 </mat-select-autocomplete>
 
+<mat-icon class="foriegnkey-lookup-icon" id="lookup-{{config.name}}" *ngIf="config?.isSearchable"
+  (click)="openListingDialog($event)">search
+</mat-icon>
 
 
 <!-- Copyright 2019 Google LLC. All Rights Reserved.
