--- a/projects/crud/src/lib/components/model-form/model-form.component.scss
+++ b/projects/crud/src/lib/components/model-form/model-form.component.scss
@@ -170,6 +170,9 @@ mat-panel-title {
     order: 2;
     color: #337ab7;
 }
+.header_btn.history {
+    margin-left: 10px;
+}
 
 .formset_container {
     width: 100%;
