--- a/projects/crud/src/lib/components/form-field/form-field.component.html
+++ b/projects/crud/src/lib/components/form-field/form-field.component.html
@@ -16,7 +16,8 @@
 
     <mat-form-field *ngSwitchCase="'date'">
         <mat-label>{{ config?.label }}</mat-label>
-        <input matInput [formControlName]="config?.name" id="{{config?.label | getSelector}}-input" [matDatepicker]="myDatepicker" />
+        <input matInput [formControlName]="config?.name" id="{{config?.label | getSelector}}-input"
+         attr.data-cy="{{config.label | getSelector}}-input" [matDatepicker]="myDatepicker" />
         <mat-error *ngIf="f[config.name].hasError('required') && (f[config.name].dirty || f[config.name].touched)" id="{{config.name}}-required-error">
             this field is required</mat-error>
         <mat-datepicker-toggle matSuffix [for]="myDatepicker" style="color: #1490C0"></mat-datepicker-toggle>
